<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login.view.LoginActivity">

    <ImageView
        android:id="@+id/cobe_logo_image_view"
        android:layout_gravity="center"
        android:src="@drawable/firelogo"
        tools:ignore="ContentDescription"
        android:layout_width="300sp"
        android:layout_height="50sp" />

    <TextView
        android:id="@+id/enter_your_username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/e_mail_address"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/e_g_firebase_admin_admin_com"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/enter_your_password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_g_password12345"
        android:inputType="textPassword"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5sp"
        android:background="@color/colorPrimary"
        android:text="@string/log_in" />

    <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_in"
        android:visibility="gone"
        tools:ignore="UnusedAttribute" />
</LinearLayout>